--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ body {
     opacity: 0;
     transform: translateY(-5rem);
     -webkit-animation: showIt 1s ease-in-out forwards;
-    -webkit-animation-delay: 2.5s; }
+    -webkit-animation-delay: 2s; }
     #intro #register .option {
       margin-bottom: 5rem; }
       #intro #register .option:last-of-type {
@@ -122,12 +122,11 @@ body {
 
 #profesional-registro {
   width: 100%;
-  height: 100vh;
   background-color: #ffffff;
   padding: 4rem;
   position: relative;
-  overflow-x: hidden;
-  overflow-y: scroll; }
+  overflow: hidden;
+  height: 100vh; }
 
 #header-row {
   display: flex;
@@ -146,9 +145,9 @@ body {
     line-height: 1;
     letter-spacing: 0.05rem;
     text-transform: uppercase;
-    padding: 1rem;
+    padding: 1rem 1.6rem;
     background-color: #2b2b2b;
-    border-radius: .5rem;
+    border-radius: 2rem;
     color: #ffffff; }
 
 #btns {
@@ -185,8 +184,11 @@ body {
       padding: 2.25rem; }
 
 #registro-cuenta {
-  transform: translateX(150vw);
-  transition: transform 0.6s cubic-bezier(0.18, 0.57, 0.5, 1.03); }
+  transition: transform 0.6s cubic-bezier(0.18, 0.57, 0.5, 1.03);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(150vw); }
   #registro-cuenta .form {
     position: relative;
     width: 100%; }
@@ -245,13 +247,16 @@ body {
     margin-top: 5rem; }
 
 #perfiles {
-  transform: translateX(150vw);
   transition: transform 0.6s cubic-bezier(0.18, 0.57, 0.5, 1.03);
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 4rem;
+  column-gap: 6rem;
   row-gap: 4rem;
-  margin-top: 12vw; }
+  margin-top: 12vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(150vw); }
   #perfiles svg {
     width: 100%; }
   #perfiles p {
@@ -261,3 +266,335 @@ body {
     letter-spacing: 0.05rem;
     text-align: center;
     margin-top: 2rem; }
+
+#personalizar {
+  transition: transform 0.6s cubic-bezier(0.18, 0.57, 0.5, 1.03);
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(150vw);
+  margin-top: 4rem; }
+  #personalizar #upload {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center; }
+    #personalizar #upload #svg-wrp {
+      width: 12rem;
+      height: 12rem;
+      border-radius: 50%;
+      border: 0.4rem solid #EF1141;
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center; }
+    #personalizar #upload svg {
+      width: 5rem; }
+    #personalizar #upload input {
+      position: absolute;
+      opacity: 0;
+      top: 50%;
+      left: 0;
+      width: 12rem;
+      transform: translateY(-50%);
+      z-index: 4000; }
+  #personalizar #presentacion {
+    width: 100%;
+    margin-top: 4rem; }
+    #personalizar #presentacion textarea {
+      width: 100%;
+      height: 20rem;
+      font-size: 1.5rem;
+      font-weight: 400;
+      line-height: 1.3;
+      letter-spacing: 0.05rem;
+      border-radius: .8rem;
+      outline: none;
+      border: 0.05rem solid #2b2b2b;
+      padding: 2rem;
+      resize: none;
+      margin-top: 2rem;
+      color: #2b2b2b; }
+    #personalizar #presentacion h2 {
+      font-size: 1.5rem;
+      font-weight: 700;
+      line-height: 1.3;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b; }
+      #personalizar #presentacion h2 span {
+        font-weight: 300;
+        margin-left: .5rem; }
+  #personalizar #redes {
+    width: 100%;
+    margin-top: 5rem; }
+    #personalizar #redes h2 {
+      font-size: 1.5rem;
+      font-weight: 700;
+      line-height: 1.3;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b;
+      text-align: left; }
+    #personalizar #redes .red {
+      display: block;
+      padding: 1.4rem;
+      border-radius: .5rem;
+      margin-top: 3rem;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center; }
+      #personalizar #redes .red svg {
+        height: 2rem;
+        margin-right: 1rem; }
+      #personalizar #redes .red p {
+        color: #ffffff;
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 1;
+        letter-spacing: 0.05rem; }
+      #personalizar #redes .red:first-of-type {
+        background-color: #1955AE; }
+      #personalizar #redes .red:nth-of-type(2) {
+        background-color: #D02257; }
+      #personalizar #redes .red:last-of-type {
+        background-color: #18AEEF; }
+  #personalizar #finalizar {
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.4;
+    letter-spacing: 0.05rem;
+    color: #ffffff;
+    background-color: #EF1141;
+    width: 100%;
+    padding: 1.5rem;
+    text-align: center;
+    outline: none;
+    border: none;
+    border-radius: 2.5rem;
+    margin-top: 5rem; }
+
+#bienvenida {
+  background-color: #EF1141;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden; }
+  #bienvenida .text {
+    transition: transform 0.6s cubic-bezier(0.18, 0.57, 0.5, 1.03);
+    position: absolute;
+    left: 4rem;
+    width: calc(100% - 8rem);
+    top: 45%;
+    transform: translate(0, -50%); }
+    #bienvenida .text h1 {
+      color: #ffffff;
+      font-size: 2.8rem;
+      font-weight: 500;
+      line-height: 1.4;
+      letter-spacing: 0.05rem;
+      text-align: center;
+      margin-bottom: 3rem; }
+    #bienvenida .text p {
+      color: #ffffff;
+      font-size: 2rem;
+      font-weight: 300;
+      line-height: 1.4;
+      letter-spacing: 0.05rem;
+      text-align: center; }
+    #bienvenida .text.hidden {
+      transform: translate(150vw, -50%); }
+  #bienvenida #bottom-content {
+    position: absolute;
+    bottom: 4rem;
+    left: 50%;
+    transform: translateX(-50%); }
+    #bienvenida #bottom-content #next {
+      color: #ffffff;
+      font-size: 2rem;
+      font-weight: 700;
+      line-height: 1.4;
+      letter-spacing: 0.05rem;
+      text-align: center;
+      margin-bottom: 5rem;
+      text-transform: uppercase; }
+    #bienvenida #bottom-content #dots {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center; }
+      #bienvenida #bottom-content #dots span {
+        width: 2rem;
+        height: 2rem;
+        display: block;
+        background-color: #ffffff;
+        opacity: .3;
+        border-radius: 50%;
+        margin-right: 2rem; }
+        #bienvenida #bottom-content #dots span:last-of-type {
+          margin-right: 0; }
+        #bienvenida #bottom-content #dots span.current {
+          opacity: 1; }
+
+#home {
+  width: 100%;
+  padding-bottom: 4rem; }
+
+#search-wrp {
+  position: relative;
+  width: calc(100% - 4rem); }
+  #search-wrp #search {
+    width: 100%;
+    margin: 2rem;
+    border-radius: 5rem;
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 1.4;
+    letter-spacing: 0.05rem;
+    padding: 1.2rem;
+    outline: none;
+    border: none;
+    box-shadow: 0rem 0rem 1vh rgba(0, 0, 0, 0.2);
+    padding-right: 5rem; }
+    #search-wrp #search::-webkit-search-cancel-button {
+      display: none; }
+  #search-wrp svg {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 2rem; }
+    #search-wrp svg path {
+      fill: grey; }
+
+#filters {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  background-color: #ffffff;
+  width: 100%;
+  overflow-x: scroll;
+  padding: 0 2rem;
+  margin-bottom: 2rem; }
+  #filters p {
+    margin-right: 1.5rem;
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 1.4;
+    letter-spacing: 0.05rem;
+    color: #2b2b2b;
+    white-space: nowrap; }
+    #filters p:first-of-type {
+      border-bottom: 0.3rem solid #EF1141; }
+
+.publicacion {
+  margin-bottom: 4rem; }
+  .publicacion .publicacion-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 2rem; }
+    .publicacion .publicacion-header .name {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center; }
+      .publicacion .publicacion-header .name img {
+        height: 3.5rem;
+        margin-right: 1rem; }
+      .publicacion .publicacion-header .name p {
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 1.4;
+        letter-spacing: 0.05rem;
+        color: #2b2b2b; }
+    .publicacion .publicacion-header svg {
+      height: 3rem; }
+      .publicacion .publicacion-header svg path {
+        fill: #fff;
+        stroke: #000;
+        opacity: 0.55; }
+  .publicacion .publicacion-img {
+    margin-bottom: 1.5rem; }
+    .publicacion .publicacion-img img {
+      width: 100%; }
+  .publicacion .publicacion-text {
+    padding: 0 2rem; }
+    .publicacion .publicacion-text h2 {
+      font-size: 1.8rem;
+      font-weight: 500;
+      line-height: 1.4;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b; }
+    .publicacion .publicacion-text .text {
+      font-size: 1.5rem;
+      font-weight: 300;
+      line-height: 1.4;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b;
+      margin: 1rem 0 2rem 0; }
+    .publicacion .publicacion-text .postularme {
+      width: 100%;
+      display: block;
+      padding: 1.5rem;
+      border-radius: 1rem;
+      background-color: #4B4B4B;
+      font-size: 1.6rem;
+      font-weight: 400;
+      line-height: 1.4;
+      letter-spacing: 0.05rem;
+      color: #ffffff;
+      text-align: center;
+      text-transform: uppercase; }
+    .publicacion .publicacion-text .time {
+      font-size: 1.4rem;
+      font-weight: 300;
+      line-height: 1.4;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b;
+      margin-top: 1rem; }
+
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 3rem;
+  background-color: #ffffff;
+  box-shadow: 0rem 0rem 1vh rgba(0, 0, 0, 0.2);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%; }
+  nav svg {
+    width: 2.8rem; }
+    nav svg #profile path, nav svg #message path {
+      fill: #EF1141; }
+    nav svg #lupa path {
+      fill: #ffffff; }
+  nav #busqueda {
+    width: 5.5rem;
+    height: 5.5rem;
+    padding: 1rem;
+    background-color: #EF1141;
+    color: #2b2b2b;
+    box-shadow: 0rem 0rem 1vh rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -1rem;
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 1.4;
+    letter-spacing: 0.05rem; }
+    nav #busqueda svg {
+      width: 2.5rem; }
