--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ body {
     opacity: 0;
     transform: translateY(-5rem);
     -webkit-animation: showIt 1s ease-in-out forwards;
-    -webkit-animation-delay: 2s; }
+    -webkit-animation-delay: 1.5s; }
     #intro #ingresar #ingresar-btn {
       background-color: #EF1141;
       color: white;
@@ -80,7 +80,7 @@ body {
   #intro #register-btn {
     opacity: 0;
     -webkit-animation: showIt 1s ease-in-out forwards;
-    -webkit-animation-delay: 2.5s; }
+    -webkit-animation-delay: 2s; }
     #intro #register-btn p {
       font-size: 1.6rem;
       font-weight: 400;
@@ -538,16 +538,29 @@ body {
   margin-bottom: 2rem; }
   #filters::-webkit-scrollbar {
     display: none; }
-  #filters p {
-    margin-right: 1.5rem;
-    font-size: 1.5rem;
-    font-weight: 400;
-    line-height: 1.4;
-    letter-spacing: 0.05rem;
-    color: #2b2b2b;
-    white-space: nowrap; }
-    #filters p:first-of-type {
-      border-bottom: 0.3rem solid #EF1141; }
+  #filters .filter-profesion {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: 2rem;
+    width: 7rem; }
+    #filters .filter-profesion p {
+      font-size: 1.4rem;
+      font-weight: 400;
+      line-height: 1.4;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b;
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      text-align: center; }
+      #filters .filter-profesion p.chosen {
+        border-bottom: 0.3rem solid #EF1141; }
+    #filters .filter-profesion svg {
+      margin-bottom: .8rem;
+      width: 5rem; }
 
 #publicaciones {
   position: relative;
@@ -557,6 +570,8 @@ body {
 
 .publicacion {
   margin-bottom: 4rem; }
+  .publicacion.postulado .publicacion-text .postularme {
+    background-color: #EF1141; }
   .publicacion .publicacion-header {
     display: flex;
     flex-direction: row;
@@ -577,12 +592,14 @@ body {
         line-height: 1.4;
         letter-spacing: 0.05rem;
         color: #2b2b2b; }
-    .publicacion .publicacion-header svg {
+    .publicacion .publicacion-header .save-btn {
       height: 3rem; }
-      .publicacion .publicacion-header svg path {
-        fill: #fff;
-        stroke: #000;
-        opacity: 0.55; }
+      .publicacion .publicacion-header .save-btn path {
+        fill: transparent;
+        stroke: rgba(0, 0, 0, 0.5); }
+      .publicacion .publicacion-header .save-btn.saved path {
+        fill: #EF1141;
+        stroke: none; }
   .publicacion .publicacion-img {
     margin-bottom: 1.5rem; }
     .publicacion .publicacion-img img {
@@ -836,14 +853,15 @@ body {
   #profile-nav ul {
     list-style: none; }
     #profile-nav ul li {
-      font-size: 1.8rem;
-      font-weight: 500;
-      line-height: 1;
-      letter-spacing: 0.05rem;
-      color: #ffffff;
       margin-bottom: 5rem; }
       #profile-nav ul li:last-of-type {
         margin-bottom: 0; }
+      #profile-nav ul li a {
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 1;
+        letter-spacing: 0.05rem;
+        color: #ffffff; }
 
 #darken-bg {
   position: fixed;
@@ -968,3 +986,305 @@ body {
     top: 0;
     left: 0;
     transform: translateX(150vw); }
+
+#header-edit-profile {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem;
+  position: fixed;
+  box-shadow: 0rem 0rem 1vh rgba(0, 0, 0, 0.2);
+  width: 100%;
+  background-color: #ffffff;
+  top: 0;
+  left: 0;
+  z-index: 500000; }
+  #header-edit-profile svg {
+    width: 3rem; }
+    #header-edit-profile svg path {
+      fill: #EF1141; }
+  #header-edit-profile a {
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 1;
+    letter-spacing: 0.05rem;
+    color: #EF1141; }
+
+#edit-profile {
+  padding: 8rem 2rem 4rem 2rem; }
+  #edit-profile #data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%; }
+    #edit-profile #data img {
+      width: 30%;
+      border-radius: 50%;
+      border: 0.5rem solid #EF1141;
+      margin-bottom: 1rem; }
+    #edit-profile #data #change-pic {
+      position: relative; }
+      #edit-profile #data #change-pic input {
+        opacity: 0;
+        position: absolute;
+        width: 100%;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%); }
+      #edit-profile #data #change-pic svg {
+        width: 2.5rem; }
+        #edit-profile #data #change-pic svg path {
+          fill: #EF1141; }
+    #edit-profile #data #name, #edit-profile #data #profesion {
+      width: 100%;
+      border: none;
+      border-bottom: 0.05rem solid rgba(0, 0, 0, 0.3);
+      font-size: 1.6rem;
+      font-weight: 500;
+      line-height: 1.4;
+      letter-spacing: 0.05rem;
+      outline: none;
+      border-radius: 0;
+      padding: 1rem 0;
+      font-family: 'Roboto', sans-serif;
+      margin-top: 1.5rem; }
+  #edit-profile #presentacion-wrp {
+    margin-top: 4rem; }
+    #edit-profile #presentacion-wrp label {
+      width: 100%;
+      font-size: 1.8rem;
+      font-weight: 700;
+      line-height: 1.3;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b; }
+      #edit-profile #presentacion-wrp label span {
+        font-weight: 300;
+        font-size: 1.5rem;
+        margin-left: .5rem; }
+    #edit-profile #presentacion-wrp textarea {
+      width: 100%;
+      height: 20rem;
+      font-size: 1.5rem;
+      font-weight: 400;
+      line-height: 1.6;
+      letter-spacing: 0.05rem;
+      border-radius: .8rem;
+      outline: none;
+      border: 0.05rem solid rgba(0, 0, 0, 0.3);
+      padding: 2rem;
+      resize: none;
+      margin-top: 2rem;
+      color: #2b2b2b;
+      font-family: 'Roboto', sans-serif; }
+  #edit-profile #redes {
+    width: 100%;
+    margin-top: 4rem; }
+    #edit-profile #redes h3 {
+      width: 100%;
+      font-size: 1.8rem;
+      font-weight: 700;
+      line-height: 1.3;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b; }
+    #edit-profile #redes .red {
+      display: block;
+      padding: 1.4rem;
+      border-radius: .5rem;
+      margin-top: 3rem;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center; }
+      #edit-profile #redes .red svg {
+        height: 2rem;
+        margin-right: 1rem; }
+      #edit-profile #redes .red p {
+        color: #ffffff;
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 1;
+        letter-spacing: 0.05rem; }
+      #edit-profile #redes .red:first-of-type {
+        background-color: #D02257; }
+      #edit-profile #redes .red:nth-of-type(2) {
+        background-color: #18AEEF; }
+      #edit-profile #redes .red:last-of-type {
+        background-color: #1955AE; }
+  #edit-profile #metricas {
+    width: 100%;
+    margin-top: 4rem; }
+    #edit-profile #metricas h3 {
+      width: 100%;
+      font-size: 1.8rem;
+      font-weight: 700;
+      line-height: 1.3;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b; }
+    #edit-profile #metricas .or {
+      color: #2b2b2b;
+      font-size: 1.5rem;
+      font-weight: 400;
+      line-height: 1;
+      letter-spacing: 0.05rem;
+      text-align: center;
+      margin: 2.5rem; }
+    #edit-profile #metricas .red {
+      display: block;
+      padding: 1.4rem;
+      border-radius: .5rem;
+      margin-top: 3rem;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      background-color: #D02257; }
+      #edit-profile #metricas .red svg {
+        height: 2rem;
+        margin-right: 1rem; }
+      #edit-profile #metricas .red p {
+        color: #ffffff;
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 1;
+        letter-spacing: 0.05rem; }
+    #edit-profile #metricas .metrica {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 3rem; }
+      #edit-profile #metricas .metrica label, #edit-profile #metricas .metrica input {
+        width: 45%;
+        font-size: 1.5rem;
+        font-weight: 500;
+        line-height: 1.3;
+        letter-spacing: 0.05rem;
+        color: #2b2b2b; }
+      #edit-profile #metricas .metrica input {
+        width: 50%;
+        border: 0.05rem solid #2b2b2b;
+        border-radius: .5rem;
+        outline: none;
+        padding: .6rem; }
+  #edit-profile .add-something .add-icon {
+    width: 2.8rem;
+    height: 2.8rem;
+    text-align: center;
+    background-color: #EF1141;
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 2.8rem;
+    letter-spacing: 0.05rem;
+    color: #ffffff;
+    border-radius: 50%;
+    display: inline-block; }
+  #edit-profile .add-something .add-text {
+    font-size: 1.7rem;
+    font-weight: 400;
+    line-height: 3rem;
+    letter-spacing: 0.05rem;
+    color: #2b2b2b;
+    display: inline-block;
+    margin-left: .5rem; }
+  #edit-profile #galeria {
+    width: 100%;
+    margin-top: 4rem; }
+    #edit-profile #galeria h3 {
+      width: 100%;
+      font-size: 1.8rem;
+      font-weight: 700;
+      line-height: 1.3;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b; }
+    #edit-profile #galeria #galeria-grid {
+      margin-top: 2rem;
+      display: grid;
+      width: 100%;
+      grid-template-columns: 26.5vw 26.5vw 26.5vw;
+      column-gap: 5vw;
+      row-gap: 4rem; }
+      #edit-profile #galeria #galeria-grid #add-img {
+        height: 26.5vw;
+        display: block;
+        background-color: #EF1141;
+        color: #ffffff;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        font-size: 5rem;
+        font-weight: 500;
+        line-height: 1.3;
+        letter-spacing: 0.05rem; }
+      #edit-profile #galeria #galeria-grid .galeria-img img {
+        height: 26.5vw;
+        width: 100%;
+        object-fit: cover; }
+      #edit-profile #galeria #galeria-grid .galeria-img .img-options {
+        margin-top: 1rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center; }
+        #edit-profile #galeria #galeria-grid .galeria-img .img-options svg {
+          display: inline-block;
+          height: 2.5rem; }
+          #edit-profile #galeria #galeria-grid .galeria-img .img-options svg path {
+            fill: #EF1141; }
+          #edit-profile #galeria #galeria-grid .galeria-img .img-options svg:first-of-type {
+            margin-right: 3rem; }
+  #edit-profile #experiencia {
+    width: 100%;
+    margin-top: 4rem; }
+    #edit-profile #experiencia h3 {
+      width: 100%;
+      font-size: 1.8rem;
+      font-weight: 700;
+      line-height: 1.3;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b;
+      margin-bottom: 2rem; }
+
+#postulados {
+  padding-top: 8rem; }
+  #postulados #postulados-filters {
+    margin: 1rem 0; }
+    #postulados #postulados-filters p {
+      text-align: center;
+      font-size: 1.6rem;
+      font-weight: 500;
+      line-height: 1;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b; }
+      #postulados #postulados-filters p span {
+        font-weight: 300; }
+
+#header-postulados {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  position: fixed;
+  box-shadow: 0rem 0rem 1vh rgba(0, 0, 0, 0.2);
+  width: 100%;
+  background-color: #ffffff;
+  top: 0;
+  left: 0;
+  z-index: 500000; }
+  #header-postulados svg {
+    position: absolute;
+    left: 1.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 3rem; }
+    #header-postulados svg path {
+      fill: #EF1141; }
+  #header-postulados p {
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: 1;
+    letter-spacing: 0.05rem;
+    color: #2b2b2b; }
