--- a/css/styles.css
+++ b/css/styles.css
@@ -493,7 +493,6 @@ body {
           opacity: 1; }
 
 #home {
-  width: 100%;
   padding-bottom: 4rem;
   position: relative;
   width: 100vw;
@@ -600,6 +599,17 @@ body {
       .publicacion .publicacion-header .save-btn.saved path {
         fill: #EF1141;
         stroke: none; }
+    .publicacion .publicacion-header .options-btn {
+      height: 3rem;
+      margin-left: 2rem; }
+      .publicacion .publicacion-header .options-btn g {
+        fill: none;
+        stroke-width: 1.5px;
+        stroke: rgba(0, 0, 0, 0.5); }
+      .publicacion .publicacion-header .options-btn .cls-3 {
+        fill: none; }
+      .publicacion .publicacion-header .options-btn .cls-2 {
+        stroke: none; }
   .publicacion .publicacion-img {
     margin-bottom: 1.5rem; }
     .publicacion .publicacion-img img {
@@ -705,7 +715,8 @@ body {
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100%; }
+  width: 100%;
+  z-index: 100000; }
   #main-nav a {
     position: relative; }
     #main-nav a svg {
@@ -806,13 +817,23 @@ body {
         background-color: #D02257; }
       #profile #redes .red:last-of-type {
         background-color: #18AEEF; }
+  #profile #galeria-grid {
+    margin-top: 4rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 2rem;
+    row-gap: 2rem; }
+    #profile #galeria-grid img {
+      width: 100%;
+      height: 26.5vw;
+      object-fit: cover; }
 
 #profile-nav-wrp {
   position: fixed;
   left: 0;
   top: 2rem;
   width: 100%;
-  z-index: 500; }
+  z-index: 90000; }
 
 #profile-nav-toggle {
   display: flex;
@@ -872,39 +893,14 @@ body {
   width: 100vw;
   height: 100vh;
   display: none;
-  z-index: 450; }
-
-#chat-header {
-  width: 100%;
-  padding: 1.5rem 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  position: relative; }
-  #chat-header p {
-    width: 50%;
-    font-size: 1.8rem;
-    font-weight: 400;
-    line-height: 1.4;
-    letter-spacing: 0.05rem;
-    color: #2b2b2b;
-    text-align: center; }
-  #chat-header #underline {
-    width: 50%;
-    height: .4rem;
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background-color: #EF1141;
-    -webkit-transition: transform 0.2s cubic-bezier(0.18, 0.57, 0.5, 1.03); }
+  z-index: 120000; }
 
 #chat-main {
   width: 100vw;
   overflow-x: hidden;
   position: relative;
-  padding: 2rem; }
+  padding: 2rem;
+  margin-bottom: 3rem; }
   #chat-main h1 {
     font-size: 2rem;
     font-weight: 400;
@@ -934,7 +930,7 @@ body {
         line-height: 1.3;
         letter-spacing: 0.05rem;
         color: #2b2b2b;
-        margin: 1.6rem 0; }
+        margin: 1rem 0; }
         #chat-main .chat-preview .content .preview span {
           font-weight: 700; }
       #chat-main .chat-preview .content .group-members {
@@ -960,10 +956,10 @@ body {
             width: 3.5rem;
             display: inline-block; }
             #chat-main .chat-preview .content .data .msj-pop svg path {
-              fill: #EF1141; }
+              fill: #4B4B4B; }
           #chat-main .chat-preview .content .data .msj-pop p {
             display: inline-block;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             font-weight: 400;
             line-height: 1.3;
             letter-spacing: 0.05rem;
@@ -981,11 +977,47 @@ body {
           letter-spacing: 0.05rem;
           color: #2b2b2b;
           margin-left: 1rem; }
-  #chat-main #equipos {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translateX(150vw); }
+
+#chat-contacts {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 2rem;
+  width: 100%;
+  overflow-x: scroll; }
+  #chat-contacts::-webkit-scrollbar {
+    display: none; }
+  #chat-contacts .contact {
+    margin-right: 2rem; }
+    #chat-contacts .contact .contact-pic {
+      position: relative; }
+      #chat-contacts .contact .contact-pic img {
+        width: 6.5rem; }
+      #chat-contacts .contact .contact-pic span {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: block;
+        width: 1.5rem;
+        height: 1.5rem;
+        border-radius: 50%;
+        border: 0.5px solid #ffffff; }
+        #chat-contacts .contact .contact-pic span.online {
+          background-color: #62c214; }
+        #chat-contacts .contact .contact-pic span.offline {
+          background-color: #474747; }
+    #chat-contacts .contact p {
+      font-size: 1.3rem;
+      font-weight: 400;
+      line-height: 1.2;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b;
+      width: 6.5rem;
+      text-align: center;
+      margin-top: .5rem; }
+    #chat-contacts .contact:last-of-type {
+      padding-right: 2rem; }
 
 #header-edit-profile {
   display: flex;
@@ -1202,11 +1234,12 @@ body {
       margin-top: 2rem;
       display: grid;
       width: 100%;
-      grid-template-columns: 26.5vw 26.5vw 26.5vw;
-      column-gap: 5vw;
-      row-gap: 4rem; }
+      grid-template-columns: 1fr 1fr 1fr;
+      column-gap: 2rem;
+      row-gap: 2rem; }
       #edit-profile #galeria #galeria-grid #add-img {
         height: 26.5vw;
+        width: 100%;
         display: block;
         background-color: #EF1141;
         color: #ffffff;
@@ -1288,3 +1321,86 @@ body {
     line-height: 1;
     letter-spacing: 0.05rem;
     color: #2b2b2b; }
+
+#profesionales {
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 2rem;
+  row-gap: 3rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(150vw);
+  -webkit-transition: transform 0.3s cubic-bezier(0.18, 0.57, 0.5, 1.03); }
+  #profesionales .profesional {
+    -webkit-transition: transform 0.5s cubic-bezier(0.18, 0.57, 0.5, 1.03); }
+    #profesionales .profesional .img {
+      position: relative;
+      margin-bottom: 2.5rem; }
+      #profesionales .profesional .img img {
+        width: 100%; }
+      #profesionales .profesional .img .rating {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        padding: .7rem 1rem;
+        background-color: #EF1141;
+        border-radius: 2rem;
+        position: absolute;
+        bottom: -1rem;
+        left: 50%;
+        transform: translateX(-50%); }
+        #profesionales .profesional .img .rating svg {
+          width: 1.5rem;
+          display: inline-block;
+          margin-right: .5rem; }
+          #profesionales .profesional .img .rating svg path {
+            fill: #ffffff; }
+        #profesionales .profesional .img .rating p {
+          font-size: 1.8rem;
+          font-weight: 500;
+          line-height: 1.5rem;
+          letter-spacing: 0.05rem;
+          color: #ffffff;
+          display: inline-block; }
+    #profesionales .profesional .name {
+      font-size: 1.5rem;
+      font-weight: 700;
+      line-height: 1;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b;
+      text-align: center;
+      margin-bottom: .8rem; }
+    #profesionales .profesional .profesion {
+      font-size: 1.4rem;
+      font-weight: 400;
+      line-height: 1;
+      letter-spacing: 0.05rem;
+      color: #EF1141;
+      text-align: center;
+      text-transform: capitalize; }
+
+#publicacion-opciones {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.8);
+  background-color: #2b2b2b;
+  padding: 0 3rem;
+  width: 65%;
+  display: none;
+  z-index: 150000;
+  -webkit-transition: transform 0.3s cubic-bezier(0.18, 0.57, 0.5, 1.03); }
+  #publicacion-opciones ul {
+    list-style: none; }
+    #publicacion-opciones ul li {
+      font-size: 1.5rem;
+      font-weight: 400;
+      line-height: 1;
+      letter-spacing: 0.05rem;
+      color: #ffffff;
+      padding-top: 3rem; }
+      #publicacion-opciones ul li:last-of-type {
+        padding-bottom: 3rem; }
